--- a/Joyce/src/main/resources/templates/tools/createCode/getPackage.html
+++ b/Joyce/src/main/resources/templates/tools/createCode/getPackage.html
@@ -12,21 +12,22 @@
                 <input class="form-control" id="id" type="hidden" name="id" />
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for="packageName">包名</label>
-                    <div  class="col-sm-4 ">
+                    <div  class="col-sm-8 ">
                         <input class="form-control" id="packageName" type="text" name="packageName" placeholder="请输入包名称"   required="required"/>
                     </div>
                 </div>
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for="packageValue">包值</label>
-                    <div  class="col-sm-4 ">
+                    <div  class="col-sm-8 ">
                         <input class="form-control" id="packageValue" type="text" name="packageValue" placeholder="请输入包值"   required="required"/>
                     </div>
                 </div>
 
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for=""> </label>
-                    <div class="col-sm-5">
+                    <div class="col-sm-8">
                         <input class="btn btn-default pull-left"  type="button" onclick="savePackage()" value="保存"/>
+                        <input class="btn btn-default pull-right"  type="button" onclick="cancelPackage()" value="取消"/>
                       <!--  <input class="btn btn-default pull-right"  type="button" onclick="applyPackage()" value="设为应用项目包"/>-->
                     </div>
                 </div>
