--- a/Joyce/src/main/resources/templates/user/searchFriendPage.html
+++ b/Joyce/src/main/resources/templates/user/searchFriendPage.html
@@ -9,13 +9,13 @@
                 <legend>查找用户</legend>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">搜索好友</label>
-                    <div  class="col-sm-8 " style="margin-right: -9%; width: 25%;">
+                    <div  class="col-sm-7 " style="margin-right: -9%;">
                         <input class="form-control"  id="username" type="text" placeholder="请输入好友用户名"/>
                     </div>
                     <a class="btn btn-default pull-right"  onclick="searchFriendFuc()">查找</a>
                 </div>
                 <div class="form-group ">
-                    <div class="col-sm-6">
+                    <div class="col-sm-12">
                         <a class="btn btn-default pull-right"  onclick="back()">返回</a>
                     </div>
                 </div>
