--- a/Joyce/src/main/resources/templates/user/addFriendListPage.html
+++ b/Joyce/src/main/resources/templates/user/addFriendListPage.html
@@ -3,8 +3,9 @@
 </head>
 <div class="container">
     <div class="row row-centered">
-        <div class="well col-md-6 col-centered">
-            <ul id="applyFriendList" class="list-group"></ul>
+        <div class="well col-md-6 col-centered" style="margin-bottom:35%">
+            <input class="btn btn-default pull-right"  type="button" onclick="back()" value="返回"/>
+            <ul id="applyFriendList"  class="list-group" style="width: 85%"></ul>
         </div>
     </div>
 </div>
