--- a/Joyce/src/main/resources/templates/common/public/getColumns.html
+++ b/Joyce/src/main/resources/templates/common/public/getColumns.html
@@ -22,7 +22,6 @@
                     <label class="col-sm-2 control-label" for="tableName">表名称</label>
                     <div  class="col-sm-8 ">
                         <select class="form-control" id="tableName">
-                        </select>
                         <!--<input class="form-control" id="tableName" type="text" name="tableName" placeholder="请输入表名称"   required="required"/>-->
                     </div>
                 </div>
@@ -35,6 +34,7 @@
                 </div>
             </form>
         </div>
+        <div id="column_table"></div>
     </div>
 </div>
 <input class="title" type="hidden" value="columns">
