--- a/Joyce/src/main/resources/templates/user/loginPage.html
+++ b/Joyce/src/main/resources/templates/user/loginPage.html
@@ -40,11 +40,15 @@
                            <input class="form-control" id="username" type="text" name="username" placeholder="请输入用户名"   required="required"/>
                        </div>
                    </div>
-                   <div class="form-group ">
+                   <div class="form-group">
                        <label class="col-sm-2 control-label" for="password">密码</label>
                        <div class="col-sm-8">
                            <input class="form-control" id="password" type="password"  name="password" onchange="password_change(this.id)" placeholder="请输入密码" required="required"/>
-                           <input type="checkbox" id="remember" checked>记住我
+                       </div>
+                   </div>
+                   <div class="form-group">
+                       <div class="col-sm-8">
+                            <input type="checkbox" style="margin-left: 55%" id="remember" checked>记住我
                        </div>
                    </div>
                    <div class="form-group ">
