--- a/Joyce/src/main/resources/templates/tools/uEditor/addUEditorPage.html
+++ b/Joyce/src/main/resources/templates/tools/uEditor/addUEditorPage.html
@@ -57,7 +57,6 @@
 <script th:src="@{/static/js/jQuery.js}"></script>
 <script th:src="@{/static/editor/editormd.js}"></script>
 <script th:src="@{/static/js/tools/uEdit/edit.js}"></script>
-<script th:src="@{/static/js/tools/uEdit/edit.js}"></script>
 <script th:src="@{/static/editor/lib/marked.min.js}"></script>
 <script th:src="@{/static/editor/lib/prettify.min.js}"></script>
 <script th:src="@{/static/editor/lib/raphael.min.js}"></script>
@@ -123,4 +122,7 @@
       }
     });
   });
+  window.onbeforeunload = function () {
+
+  }
 </script>
