--- a/Joyce/src/main/resources/templates/common/public/getColumns.html
+++ b/Joyce/src/main/resources/templates/common/public/getColumns.html
@@ -35,6 +35,7 @@
             </form>
         </div>
         <div id="column_table"></div>
+        <div id="column_table2"></div>
     </div>
 </div>
 <input class="title" type="hidden" value="columns">
