--- a/Joyce/src/main/resources/templates/common/public/header.html
+++ b/Joyce/src/main/resources/templates/common/public/header.html
@@ -21,7 +21,7 @@
     <title th:replace="${title}"></title>
     <link rel="stylesheet"  type="text/css" th:href="@{/static/css/utils/toastr/toastr.css}" />
     <link rel="stylesheet"  type="text/css" th:href="@{/static/css/utils/toastr/toastr.css}" />
-    <link  rel="stylesheet" th:href="@{/static/css/utils/L2d/L2d.css}"/>
+    <link  rel="stylesheet" type="text/css" th:href="@{/static/css/utils/L2d/L2d.css}"/>
     <link rel="shortcut icon" type="image/x-icon" th:href="@{/static/img/logo/favicon.ico}"  />
 </head>
 <body>
