--- a/Joyce/src/main/resources/templates/source/albumPage.html
+++ b/Joyce/src/main/resources/templates/source/albumPage.html
@@ -15,8 +15,9 @@
 <script type="text/javascript" th:src="@{/static/js/source/album.js}"></script>
 <head class="panelBar" th:replace="/common/public/footer::footer"></head>
 <script type="text/javascript">
-$.ready(function () {
-	var id = $('#album_id').var
+$().ready(function () {
+	var id = $('#album_id').val();
+	console.log("id--------->"+id);
 	getSource(id);
 });
 </script>
