--- a/Joyce/src/main/resources/templates/source/albumListPage.html
+++ b/Joyce/src/main/resources/templates/source/albumListPage.html
@@ -11,15 +11,15 @@
             <div id="toolbar-btn" class="btn-group pull-left" style="padding-bottom:10px;">
               <button id="btn_add" onclick="toList('/example/source/sourcePage')" type="button" class="btn btn-primary btn-space">添加
               </button>
-              <button id="btn_delete" onclick="deleteIdsFuc()" type="button" class="btn btn-danger btn-space">删除
+              <button id="btn_delete" onclick="deleteByIdsT($('#albumTable'),'/example/source/deleteAlbum',false,null)" type="button" class="btn btn-danger btn-space">删除
               </button>
             </div>
             <div class="pull-right" id="query-form" style="padding-bottom:10px;">
-              <input name="username" placeholder='资源名称' type="text"
-                     style="float:left;width:150px;margin-right:5px;" v-model="sourceUrl"
+              <input name="name" placeholder='相册名称' type="text"
+                     style="float:left;width:150px;margin-right:5px;"
                      class="form-control">
               <div class="btn-group">
-                <button id="btn_search" onclick="sourceSearch()" type="button" class="btn btn-primary btn-space">搜索
+                <button id="btn_search" onclick="albumSearch()" type="button" class="btn btn-primary btn-space">搜索
                   <span class="fa fa-search" aria-hidden="true"></span>
                 </button>
                 <button id="btn_reset" onclick="resetSearch()" type="button" class="btn btn-default btn-space">重置
@@ -30,7 +30,7 @@
             </div>
           </div>
           <!-- Modal -->
-          <div class="modal fade" id="video_modal">
+          <div class="modal fade" id="album_modal">
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content">
                 <div class="modal-body">
@@ -42,14 +42,21 @@
             </div>
           </div>
 
-          <table id="sourceTable" data-mobile-responsive="true" class="mb-bootstrap-table text-nowrap"></table>
+          <table id="albumTable" data-mobile-responsive="true" class="mb-bootstrap-table text-nowrap"></table>
 
         </div>
       </div>
     </div>
   </div>
 </div>
+<!--
 <script type="text/javascript" th:src="@{/static/js/jQuery.js}"></script>
-<script type="text/javascript" th:src="@{/static/js/source/source.js}"></script>
-<head class="panelBar" th:replace="/common/public/footer::footer"></head>
+-->
 
+<head class="panelBar" th:replace="/common/public/footer::footer"></head>
+<script type="text/javascript" th:src="@{/static/js/source/album.js}"></script>
+<script type="text/javascript">
+  $().ready(function () {
+    getAlbumTables();
+  });
+</script>
