--- a/Joyce/src/main/resources/static/css/source/album.css
+++ b/Joyce/src/main/resources/static/css/source/album.css
@@ -2,9 +2,8 @@ html{
 	background: #000;
     height: 100%;	
 }
-/*×îÍâ²ãÈÝÆ÷ÑùÊ½*/
+/*ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê½*/
 .wrap{
-	position: relative;
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -13,10 +12,10 @@ html{
 	width: 200px;
 	height: 200px;
 	margin: auto;
-	/*¸Ä±ä×óÓÒÉÏÏÂ,Í¼Æ¬·½¿éÒÆ¶¯*/
-	
+	/*ï¿½Ä±ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½,Í¼Æ¬ï¿½ï¿½ï¿½ï¿½ï¿½Æ¶ï¿½*/
+
 }
-/*°ü¹üËùÓÐÈÝÆ÷ÑùÊ½*/
+/*ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê½*/
 .cube{
 	width: 200px;
 	height: 200px;
@@ -24,7 +23,7 @@ html{
 	transform-style: preserve-3d;
 	transform: rotateX(-30deg) rotateY(-80deg);
 	-webkit-animation: rotate 20s infinite;
-	/*ÔÈËÙ*/
+	/*ï¿½ï¿½ï¿½ï¿½*/
 	animation-timing-function: linear;
 }
 @-webkit-keyframes rotate{
@@ -38,7 +37,7 @@ html{
 	opacity: 0.8;
 	transition: all .4s;
 }
-/*¶¨ÒåËùÓÐÍ¼Æ¬ÑùÊ½*/
+/*ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Í¼Æ¬ï¿½ï¿½Ê½*/
 .pic{
 	width: 200px;
 	height: 200px;
@@ -61,7 +60,7 @@ html{
 .cube .out_bottom{
 	transform: rotateX(-90deg) translateZ(100px);
 }
-/*¶¨ÒåÐ¡Õý·½ÌåÑùÊ½*/
+/*ï¿½ï¿½ï¿½ï¿½Ð¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê½*/
 .cube span{
 	display: bloack;
 	width: 100px;
@@ -92,7 +91,7 @@ html{
 .cube .in_bottom{
 	transform: rotateX(-90deg) translateZ(50px);
 }
-/*Êó±êÒÆÈëºóÑùÊ½*/
+/*ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê½*/
 .cube:hover .out_front{
 	transform: rotateY(0deg) translateZ(200px);
 }
