--- a/Joyce/src/main/resources/templates/source/albumPage.html
+++ b/Joyce/src/main/resources/templates/source/albumPage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head class="paneBar" th:replace="/common/public/header::header(~{::title})">
-	<title>资源上传</title>
+	<title>查看内外相册</title>
 </head>
 <link  rel="stylesheet" th:href="@{/static/css/source/album.css}"/>
 <input id="album_id" type="hidden" th:value="${id}"/>
