--- a/Joyce/src/main/resources/templates/source/addAlbumPage.html
+++ b/Joyce/src/main/resources/templates/source/addAlbumPage.html
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="row">
       <!--  <div class="col-sm-3"></div>-->
-        <div id="pics" class="col-sm-6">
+        <div id="pis" class="col-sm-6">
        <!--     <h2>Before</h2>
             <label for="input-file-before">Basic HTML input file</label>
             <input type="file" id="input-file-before" />
