--- a/Joyce/src/main/resources/templates/source/albumListPage.html
+++ b/Joyce/src/main/resources/templates/source/albumListPage.html
@@ -1,17 +1,21 @@
 <head class="paneBar" th:replace="/common/public/header::header(~{::title})">
-  <title>资源列表</title>
+  <title>相册列表</title>
 </head>
 <link  rel="stylesheet" th:href="@{/static/css/source/source.css}"/>
+<div class="log">
+  <head class="panelBar" th:replace="/common/public/headerBar::bar"></head>
+</div>
 <div class="container-fluid" style="width: 90%;margin-top:5%;margin-left: -3%">
   <div class="col-md-11 content">
     <div class="content-body">
       <div id="user_list_div">
         <div class="container-fluid">
           <div>
+            <input class="title" type="hidden" value="al"/>
             <div id="toolbar-btn" class="btn-group pull-left" style="padding-bottom:10px;">
               <button id="btn_add" onclick="toList('/example/source/sourcePage')" type="button" class="btn btn-primary btn-space">添加
               </button>
-              <button id="btn_delete" onclick="deleteByIdsT($('#albumTable'),'/example/source/deleteAlbum',false,null)" type="button" class="btn btn-danger btn-space">删除
+              <button id="btn_delete" onclick="deleteByIdsT($('#albumTable'),'/example/source/delAlbum','/example/source/albumListPage')" type="button" class="btn btn-danger btn-space">删除
               </button>
             </div>
             <div class="pull-right" id="query-form" style="padding-bottom:10px;">
