--- a/Joyce/src/main/resources/templates/common/public/getColumns.html
+++ b/Joyce/src/main/resources/templates/common/public/getColumns.html
@@ -14,7 +14,8 @@
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for="dbName">database名称</label>
                     <div  class="col-sm-8    ">
-                        <input class="form-control" id="dbName" type="text" name="dbName" placeholder="请输入database名称"   required="required" onchange=" getTablesByDatabaseName()"/>
+                        <!--<input class="form-control" id="dbName" type="text" name="dbName" placeholder="请输入database名称"   required="required" onchange=" getTablesByDatabaseName()"/>-->
+                        <select class="form-control" id="dbName" onchange="getTablesByDatabaseName()"></select>
                     </div>
                 </div>
 
