--- a/Joyce/src/main/resources/templates/tools/uEditor/addUEditorPage.html
+++ b/Joyce/src/main/resources/templates/tools/uEditor/addUEditorPage.html
@@ -1,5 +1,5 @@
 <head class="paneBar" th:replace="/common/public/header::header(~{::title})">
-  <title>笔记</title>
+    <title>笔记</title>
 </head>
 
 <!--<div class="log">
@@ -9,45 +9,47 @@
 <!--Editor.md-->
 <meta name="renderer" content="webkit">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+<meta name="viewport"
+      content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi"/>
 <link rel="stylesheet" th:href="@{/static/editor/css/editormd.css}"/>
 
 <body>
 <!--添加修改-->
 <!--弹窗-->
-<div class="modal fade" id="add_article_info"  role="dialog" aria-labelledby="updatePasswordLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title" id="myModalLabel">
-          填写信息
-        </h4>
-      </div>
-      <form id="form_data">
-        <input type="hidden" id="article_id" >
-        <div style="margin-left: 22px;margin-top: 30px;">
-          输入文章名<input type="text" class="article" id='in_title' required="required" placeholder="请输入文章名" autocomplete="off"  />
-        </div>
-        <div class="modal-footer">
-          <button type="button"  onclick="saveArticleFuc()" class="btn btn-primary ">提交</button>
-          <button type="button" class="btn btn-default " data-dismiss="modal">关闭</button>
-        </div>
-      </form>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal -->
+<div class="modal fade" id="add_article_info" role="dialog" aria-labelledby="updatePasswordLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel">
+                    填写信息
+                </h4>
+            </div>
+            <form id="form_data">
+                <input type="hidden" id="article_id">
+                <div style="margin-left: 22px;margin-top: 30px;">
+                    输入文章名<input type="text" class="article" id='in_title' required="required" placeholder="请输入文章名"
+                                autocomplete="off"/>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" onclick="saveArticleFuc()" class="btn btn-primary ">提交</button>
+                    <button type="button" class="btn btn-default " data-dismiss="modal">关闭</button>
+                </div>
+            </form>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
 </div>
 <div id="article_content" class="layui-fluid">
     <div class="layui-row layui-col-space15">
-      <div class="layui-col-md12">
-        <!--博客表单-->
-        <form name="mdEditorForm">
-          <div id="article_content_info">
-            <textarea id="in_content" name="content"  type="markdown" style="display:none;" > </textarea>
-          </div>
-        </form>
-      </div>
+        <div class="layui-col-md12">
+            <!--博客表单-->
+            <form name="mdEditorForm">
+                <div id="article_content_info">
+                    <textarea id="in_content" name="content" type="markdown" style="display:none;"> </textarea>
+                </div>
+            </form>
+        </div>
     </div>
-  </div>
+</div>
 
 <!--菜单-->
 <input class="title" type="hidden" value="uedit">
@@ -66,62 +68,62 @@
 <script th:src="@{/static/editor/lib/jquery.flowchart.min.js}"></script>
 <head class="panelBar" th:replace="/common/public/footer::footer"></head>
 <script type="text/javascript">
-  var testEditor;
-  $(function () {
-    testEditor = editormd("article_content_info", {
-      width : "95%",
-      height : 400,
-      syncScrolling : "single",
-      path : "/static/editor/lib/",
-      saveHTMLToTextarea : true,    // 保存 HTML 到 Textarea
-      emoji: true,
-      theme: "dark",//工具栏主题
-      previewTheme: "dark",//预览主题
-      editorTheme: "pastel-on-dark",//编辑主题
-      tex : true,                   // 开启科学公式TeX语言支持，默认关闭
-      flowChart : true,             // 开启流程图支持，默认关闭
-      sequenceDiagram : true,       // 开启时序/序列图支持，默认关闭,
-      /*fullscreen: true,    */       //全屏开启
-      //图片上传
-      imageUpload : true,
-      imageFormats : ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
-      imageUploadURL : "/example/uedit/upload",
-      onload : function() {
-        console.log('onload', this);
-      },
-      /*指定需要显示的功能按钮*/
-      toolbarIcons : function() {
-        return ["undo","redo","|",
-          "bold","del","italic","quote","ucwords","uppercase","lowercase","|",
-          "h1","h2","h3","h4","h5","h6","|",
-          "list-ul","list-ol","hr","|",
-          "link","reference-link","image","code","preformatted-text",
-          "code-block","table","datetime","emoji","html-entities","pagebreak","|",
-          "goto-line","watch","preview","fullscreen","clear","search","|",
-          "help","info","releaseIcon", "index"]
-      },
+    var testEditor;
+    $(function () {
+        testEditor = editormd("article_content_info", {
+            width: "95%",
+            height: 400,
+            syncScrolling: "single",
+            path: "/static/editor/lib/",
+            saveHTMLToTextarea: true,    // 保存 HTML 到 Textarea
+            emoji: true,
+            theme: "dark",//工具栏主题
+            previewTheme: "dark",//预览主题
+            editorTheme: "pastel-on-dark",//编辑主题
+            tex: true,                   // 开启科学公式TeX语言支持，默认关闭
+            flowChart: true,             // 开启流程图支持，默认关闭
+            sequenceDiagram: true,       // 开启时序/序列图支持，默认关闭,
+            /*fullscreen: true,    */       //全屏开启
+            //图片上传
+            imageUpload: true,
+            imageFormats: ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
+            imageUploadURL: "/example/uedit/upload",
+            onload: function () {
+                console.log('onload', this);
+            },
+            /*指定需要显示的功能按钮*/
+            toolbarIcons: function () {
+                return ["undo", "redo", "|",
+                    "bold", "del", "italic", "quote", "ucwords", "uppercase", "lowercase", "|",
+                    "h1", "h2", "h3", "h4", "h5", "h6", "|",
+                    "list-ul", "list-ol", "hr", "|",
+                    "link", "reference-link", "image", "code", "preformatted-text",
+                    "code-block", "table", "datetime", "emoji", "html-entities", "pagebreak", "|",
+                    "goto-line", "watch", "preview", "fullscreen", "clear", "search", "|",
+                    "help", "info", "releaseIcon", "index"]
+            },
 
-      /*自定义功能按钮，下面我自定义了2个，一个是发布，一个是返回首页*/
-      toolbarIconTexts : {
-        releaseIcon : "<span id='article_save_btn' bgcolor=\"gray\">发布</span>",
-        index : "<span bgcolor=\"red\">返回</span>",
-      },
+            /*自定义功能按钮，下面我自定义了2个，一个是发布，一个是返回首页*/
+            toolbarIconTexts: {
+                releaseIcon: "<span id='article_save_btn' bgcolor=\"gray\">发布</span>",
+                index: "<span bgcolor=\"red\">返回</span>",
+            },
 
-      /*给自定义按钮指定回调函数*/
-      toolbarHandlers:{
-        releaseIcon : function() {
-          //表单提交
-          /* mdEditorForm.method = "post";
-           mdEditorForm.action = "/example/uedit/saveArticle";//提交至服务器的路径
-           mdEditorForm.submit();*/
-          $("#add_article_info").modal('show');
-        },
-        index : function(){
-          toList("/example/uedit/uEditorListPage");
-        }
-      }
+            /*给自定义按钮指定回调函数*/
+            toolbarHandlers: {
+                releaseIcon: function () {
+                    //表单提交
+                    /* mdEditorForm.method = "post";
+                     mdEditorForm.action = "/example/uedit/saveArticle";//提交至服务器的路径
+                     mdEditorForm.submit();*/
+                    $("#add_article_info").modal('show');
+                },
+                index: function () {
+                    toList("/example/uedit/uEditorListPage");
+                }
+            }
+        });
     });
-  });
-  window.onbeforeunload = function () {
-  }
+    window.onbeforeunload = function () {
+    }
 </script>
