--- a/Joyce/src/main/resources/templates/tools/uEditor/uEditorListPage.html
+++ b/Joyce/src/main/resources/templates/tools/uEditor/uEditorListPage.html
@@ -1,57 +1,63 @@
 <head class="paneBar" th:replace="/common/public/header::header(~{::title})">
-  <title>笔记</title>
+    <title>笔记</title>
 </head>
 
 <div class="log">
-  <head class="panelBar" th:replace="/common/public/headerBar::bar"></head>
+    <head class="panelBar" th:replace="/common/public/headerBar::bar"></head>
 </div>
 
 <!--Editor.md-->
 <meta name="renderer" content="webkit">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+<meta name="viewport"
+      content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi"/>
 <link rel="stylesheet" th:href="@{/static/editor/css/editormd.css}"/>
-<link rel="shortcut icon" href="https://pandao.github.io/editor.md/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="https://pandao.github.io/editor.md/favicon.ico" type="image/x-icon"/>
 
 <body>
 
 <!--列表-->
 <div id="article_table_div" class="container-fluid" style="width: 90%;margin-top:5%;margin-left: -3%">
-  <div class="col-md-11 content">
-    <div class="content-body">
-      <div id="user_list_div">
-        <div class="container-fluid">
-          <div>
-            <div id="toolbar-btn" class="btn-group pull-left" style="padding-bottom:10px;">
-              <button id="btn_add" onclick="addArticleFuc()" type="button" class="btn btn-primary btn-space">添加
-              </button>
-              <button id="btn_delete" onclick="deleteArticleFuc()" type="button" class="btn btn-danger btn-space">删除
-              </button>
+    <div class="col-md-11 content">
+        <div class="content-body">
+            <div id="user_list_div">
+                <div class="container-fluid">
+                    <div>
+                        <div id="toolbar-btn" class="btn-group pull-left" style="padding-bottom:10px;">
+                            <button id="btn_add" onclick="addArticleFuc()" type="button"
+                                    class="btn btn-primary btn-space">添加
+                            </button>
+                            <button id="btn_delete" onclick="deleteArticleFuc()" type="button"
+                                    class="btn btn-danger btn-space">删除
+                            </button>
+                        </div>
+                        <div class="pull-right" id="query-form" style="padding-bottom:10px;">
+                            <input name="title" placeholder='主题' type="text"
+                                   style="float:left;width:150px;margin-right:5px;" v-model="username"
+                                   class="form-control">
+                            <div style="float:left;margin-right:5px;">
+                                <input name="author" placeholder='作者' type="text"
+                                       style="float:left;width:150px;margin-right:5px;" v-model="author"
+                                       class="form-control">
+                            </div>
+                            <div class="btn-group">
+                                <button id="btn_search" onclick="articleSearch()" type="button"
+                                        class="btn btn-primary btn-space">搜索
+                                    <span class="fa fa-search" aria-hidden="true"></span>
+                                </button>
+                                <button id="btn_reset" onclick="resetSearch()" type="button"
+                                        class="btn btn-default btn-space">重置
+                                    <span class="fa fa-eraser" aria-hidden="true"></span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <table id="articleTable" data-mobile-responsive="true"
+                           class="mb-bootstrap-table text-nowrap"></table>
+                </div>
             </div>
-            <div class="pull-right" id="query-form" style="padding-bottom:10px;">
-              <input name="title" placeholder='主题' type="text"
-                     style="float:left;width:150px;margin-right:5px;" v-model="username"
-                     class="form-control">
-              <div style="float:left;margin-right:5px;">
-                <input name="author" placeholder='作者' type="text"
-                       style="float:left;width:150px;margin-right:5px;" v-model="author"
-                       class="form-control">
-              </div>
-              <div class="btn-group">
-                <button id="btn_search" onclick="articleSearch()" type="button" class="btn btn-primary btn-space">搜索
-                  <span class="fa fa-search" aria-hidden="true"></span>
-                </button>
-                <button id="btn_reset" onclick="resetSearch()" type="button" class="btn btn-default btn-space">重置
-                  <span class="fa fa-eraser" aria-hidden="true"></span>
-                </button>
-              </div>
-            </div>
-          </div>
-          <table id="articleTable" data-mobile-responsive="true" class="mb-bootstrap-table text-nowrap"></table>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 <!--菜单-->
 <input class="title" type="hidden" value="uedit"/>
