--- a/Joyce/src/main/resources/templates/index.html
+++ b/Joyce/src/main/resources/templates/index.html
@@ -147,6 +147,9 @@
 		        }, i * 10);
 		    })(i);
 		}
+		function openwin(url) {
+			window.open (url, "newwindow", "height=300, width=400, top=200,left=200 toolbar =no, menubar=no, scrollbars=no, resizable=no, location=no, status=no")
+		}
 	</script>
 </body>
 </html>
