--- a/Joyce/src/main/resources/templates/common/public/footer.html
+++ b/Joyce/src/main/resources/templates/common/public/footer.html
@@ -23,6 +23,7 @@
   <script type="text/javascript" th:src="@{/static/js/utils/Ewin/js/Ewin.js}"></script>
   <script type="text/javascript" th:src="@{/static/js/utils/L2d/L2Dwidget.min.js}"></script>
   <script type="text/javascript" th:src="@{/static/js/utils/L2d/L2Dwidget.0.min.js}"></script>
+  <script type="text/javascript" th:src="@{/static/js/jQuery.qrcode.js}"></script>
   <script type="text/javascript">
     L2Dwidget.init({"display": {
             "superSample": 2,
