--- a/Joyce/src/main/resources/templates/source/sourcePage.html
+++ b/Joyce/src/main/resources/templates/source/sourcePage.html
@@ -67,7 +67,7 @@
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for="select"> </label>
                     <div class="col-sm-8">
-                        <input class="btn btn-default pull-left" type="button" onclick="saveSource(0)" value="确认添加"/>
+                        <input class="btn btn-default pull-left" type="button" onclick="saveSource()" value="确认添加"/>
                         <a class="btn btn-default pull-right" onclick="back()">返回</a>
                         <a class="btn btn-default " onclick="sourceList()">列表</a>
                     </div>
