--- a/Joyce/src/main/resources/templates/tools/task/dayTaskListPage.html
+++ b/Joyce/src/main/resources/templates/tools/task/dayTaskListPage.html
@@ -55,7 +55,7 @@
         <form class="form-horizontal center-block" role="form"  method="get">
             <legend>任务添加</legend>
             <input id="addId" type="hidden"/>
-            <!--<div class="form-group ">
+            &lt;!&ndash;<div class="form-group ">
                 <label class="col-sm-2 control-label" for="addTodayTask">今日任务</label>
                 <div  class="col-sm-4 ">
                     <input class="form-control" id="addTodayTask"  style="width: 50%" type="text" name="addTodayTask" placeholder=""/>
@@ -66,7 +66,7 @@
                 <div class="col-sm-8">
                     <input class="form-control" id="addFinalyTask"  style="width: 50%" type="text"  name="addFinalyTask"  onchange="password_change(this.id)" placeholder=""/>
                 </div>
-            </div>-->
+            </div>&ndash;&gt;
             <div class="form-group ">
                 <label class="col-sm-2 control-label" for="addStartTimes">开始时间</label>
                 <div class="col-sm-8">
@@ -89,7 +89,7 @@
                     </select>
                 </div>
             </div>
-           <!-- <div class="form-group ">
+           &lt;!&ndash; <div class="form-group ">
                 <label class="col-sm-2 control-label" for="addProjectId">所属项目</label>
                 <div class="col-sm-8">
                     <select id="addProjectId"  style="width: 50%">
@@ -98,7 +98,7 @@
                                 th:text="${project.projectName }"></option>
                     </select>
                 </div>
-            </div>-->
+            </div>&ndash;&gt;
             <div class="form-group ">
                 <label class="col-sm-2 control-label" for="regist"> </label>
                 <div class="col-sm-5">
